<resources>
    <string name="app_name">TicTacToe-android-client</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="initial_screen_label">Initial Screen</string>
    <string name="loading_screen_label">Loading Screen</string>
    <string name="game_screen_label">Game Screen</string>

    <string name="name_input">Write Name:</string>
    <string name="name_hint">Name</string>
    <string name="find_game">Find Game</string>
    <string name="play_solo">Play solo</string>
    <string name="initial_turn">Your opponent\'s turn</string>

</resources>