<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialScreen">

    <TextView
        android:id="@+id/name_field_text_view"
        android:layout_width="287dp"
        android:layout_height="64dp"
        android:text="@string/name_input"
        android:textSize="40sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/find_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="146dp"
        android:layout_height="52dp"
        android:hint="@string/name_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/find_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_field_text_view" />

    <Button
        android:id="@+id/find_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_field_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>